finished mortgage calculator

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -248,3 +248,6 @@ Performance/RedundantMatch:
                   Use `=~` instead of `String#match` or `Regexp#match` in a context where the
                   returned `MatchData` is not needed.
   Enabled: false
+
+Style/Tab:
+  Enabled: false
